--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "html-pdf-node": "^1.0.8",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
   }
