--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://ravi:ravi1234@cluster0.n2krrfe.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://ravi:ravi1234@cluster0.n2krrfe.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://ravi:ravi1234@cluster0.n2krrfe.mongodb.net/test
